// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/TextInput/TextInput.tools.svelte: Default 1`] = `
<span
  class="inline-block w-64"
>
  <span
    class="svelte-1rbj4tt"
  >
     
    <input
      class="svelte-1rbj4tt"
      placeholder=""
      type="text"
    />
  </span>
</span>
`;

exports[`Toolshot components/TextInput/TextInput.tools.svelte: With icon and placeholder 1`] = `
<span
  class="inline-block w-64"
>
  <span
    class="svelte-1rbj4tt icon"
  >
    <i
      class="material-icons svelte-1rbj4tt"
    >
      search
    </i>
     
    <input
      class="svelte-1rbj4tt"
      placeholder="search..."
      type="search"
    />
  </span>
</span>
`;

exports[`Toolshot components/TextInput/TextInput.tools.svelte: With value 1`] = `
<span
  class="inline-block w-64"
>
  <span
    class="svelte-1rbj4tt icon"
  >
    <i
      class="material-icons svelte-1rbj4tt"
    >
      person
    </i>
     
    <input
      class="svelte-1rbj4tt"
      placeholder=""
      type="text"
    />
  </span>
</span>
`;
